# docling-plus

./: .gitignore
docling-ibm-models/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docling-ibm-models/.github/: codecov.yml
docling-ibm-models/.github/scripts/: release.sh
docling-ibm-models/.github/workflows/: cd.yml  checks.yml  ci.yml  pypi.yml
docling-ibm-models/demo/: demo_layout_predictor.py
docling-ibm-models/docling_ibm_models/code_formula_model/: code_formula_predictor.py
docling-ibm-models/docling_ibm_models/code_formula_model/models/: sam_opt.py
docling-ibm-models/docling_ibm_models/document_figure_classifier_model/: document_figure_classifier_predictor.py
docling-ibm-models/docling_ibm_models/layoutmodel/: layout_predictor.py  layoutconfig.py
docling-ibm-models/docling_ibm_models/list_item_normalizer/: list_marker_processor.py
docling-ibm-models/docling_ibm_models/reading_order/: reading_order_rb.py
docling/docling/datamodel/: layout_model_specs.py  pipeline_options.py
docling/docling/models/: layout_model.py
docling/tests/data/groundtruth/docling_v2/: table_02.html.json
syndoc/: .gitignore  IMPLEMENTATION.md  LICENSE  PROJECT_COMPLETE.md  README.md  pyproject.toml
syndoc/docs/: ARCHITECTURE.md  QUICKSTART.md
syndoc/examples/: basic_usage.py  custom_model.py
syndoc/syndoc/: __init__.py  converter.py
syndoc/syndoc/backends/: __init__.py  base.py  pdf_backend.py
syndoc/syndoc/datamodels/: __init__.py  config.py  document.py  enums.py
syndoc/syndoc/pipelines/: __init__.py  base.py  pdf_pipeline.py
syndoc/syndoc/utils/: __init__.py  profiling.py
(+9 files in other folders)
